--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,4 @@
 <resources>
-    <string name="app_name">Naggaro</string>
+    <string name="app_name">Smart Seeds</string>
     <string name="title_activity_home">HomeActivity</string>
 </resources>
